2007-09-19  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/img/flash/Makefile.am: actually install the new banner.

2007-09-19  Lucas Rocha  <lucasr@gnome.org>
	
	* www.gnome.org/index.html: news entry about GNOME 2.20 release.
	* www.gnome.org/img/flash/two-twenty.jpg: GNOME 2.20 front page banner.

2007-09-19  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess: update stable/unstable redirects
	* www.gnome.org/start/2.20/index.wml: improve a bit the sentence so
	that it feels better
	* www.gnome.org/start/index.wml: update stable/unstable redirects

2007-09-19  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/: GNOME 2.20.0 has been released,
	new stable branch. Edit accordingly...

2006-09-17  Brian Cameron  <brian.cameron@sun.com>

	* www.gnome.org/projects/gdm/*.html: Updated to reference
	  2.20 as the latest stable release.
	* www.gnome.org/projects/gdm/docs/2.20/*: Added new 2.20
	  documentation.
	* www.gnome.org/projects/gdm/docs/*/*html: Updated all html
	  files so that they are generated with the latest doc utils.
	  This corrects a lot of formatting issues and makes the
	  docs look more consistent.
	 
2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* tour/Makefile.am: Use the makefile improvement from 
	Peter Newton in svn revision 4787, to avoid breaking the build 
	with an error when a translator forgets to create a figures 
	directory.

2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* www.gnome.org/start/2.20/Makefile.am:
	* www.gnome.org/start/2.20/press_release/: Removed, because we 
	plan to just use the introductory paragraphs of the release notes 
	instead.

2007-09-04  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/download.shtml:
	Update latest unstable version (2.11.92).

2007-09-03  Andreas Nilsson  <nisses.mail@home.se>

	* www.gnome.org/start/2.20/notes/docbook/C/figures/*.png: