@@ -33,7 +33,7 @@
 <div id="top">
 
 <!-- relink this to the ten wiki asap -->
-<a href="http://www.gnome.org/start/2.20/notes/C"><img src="img/flash/two-twenty.jpg" title="GNOME 2.20 Released!" alt="" width="750" height="350"/></a>
+<a href="http://www.gnome.org/start/2.20/notes/en"><img src="img/flash/two-twenty.jpg" title="GNOME 2.20 Released!" alt="" width="750" height="350"/></a>
 
 
 </div><!-- top -->
@@ -46,10 +46,10 @@
 <div id="bottomLeftLeft">
 <h2>Latest News</h2>
 
-<h3><a href="http://www.gnome.org/start/2.20/notes/C">GNOME 2.20 Released!</a></h3>
-<p>The GNOME desktop and platform received a lot of improvements and new
+<h3><a href="http://www.gnome.org/start/2.20/notes/en">GNOME 2.20 Released!</a></h3>
+<p>The GNOME desktop and platform received many improvements and new
 features. Learn more about this release through the detailed 
-<a href="http://www.gnome.org/start/2.20/notes/C/">release notes</a>.</p>
+<a href="http://www.gnome.org/start/2.20/notes/en/">release notes</a>.</p>
 
 <h3><a href="http://www.gnomejournal.org/">The GNOME Journal, June Edition</a></h3>
 <p>The latest issue of the GNOME Journal has just been published. GNOME Journal
