@@ -1,3 +1,9 @@
+2007-09-19  Murray Cumming  <murrayc@murrayc.com>
+
+	* www.gnome.org/index.html: Link to the en version of the release notes, 
+	not the C version. The en translation has corrections that happened 
+	after the string freeze.
+
 2007-09-19  Lucas Rocha  <lucasr@gnome.org>
 
 	* www.gnome.org/img/flash/Makefile.am: actually install the new banner.
